magento-env/nat.tf
#NAT gw
resource "aws_eip" "ip-nat" {
  vpc      = true
}
resource "aws_nat_gateway" "nat-gw" {
  allocation_id = "${aws_eip.ip-nat.id}"
  subnet_id = "${aws_subnet.main-public-1a.id}"
  depends_on = ["aws_internet_gateway.main-gw"]
}

#VPC setup for NAT
resource "aws_route_table" "main-private" {
    vpc_id = "${aws_vpc.main.id}"
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = "${aws_nat_gateway.nat-gw.id}"
    }

    tags {
        Name = "main-private-1"
    }
}

resource "aws_route_table_association" "main-private-1a" {
    subnet_id = "${aws_subnet.main-private-1a.id}"
    route_table_id = "${aws_route_table.main-private.id}"
}
resource "aws_route_table_association" "main-private-1b" {
    subnet_id = "${aws_subnet.main-private-1b.id}"
    route_table_id = "${aws_route_table.main-private.id}"
}
resource "aws_route_table_association" "main-private-1c" {
    subnet_id = "${aws_subnet.main-private-1c.id}"
    route_table_id = "${aws_route_table.main-private.id}"
}
